2012-02-19 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/SDCCsymt.h,
	  src/SDCCsymt.c (findSymWithLevel),
	  src/SDCCast.c (resolveSymbols, processBlockVars): fixed bugs 3403429,
	  3153215, 3107914 
	* support/regression/tests/bug3403429.c: enabled test

2012-02-18 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/tests/gcc-torture-execute-pr44468.c,
	  support/regression/tests/gcc-torture-execute-pr43438.c,
	  support/regression/tests/gcc-torture-execute-pr45034.c:
	  Disable tests for older gcc.

2012-02-17 Philipp Klaus Krause <pkk AT spth.de>

	* device/lib/z80/divunsigned.s,
	  device/lib/z180/divunsigned.s,
	  device/lib/r2k/divunsigned.s:
	  Remove some leftover code for handling division by zero (patch by parerga, #3488149).

2012-02-17 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/tests/gcc-torture-execute-pr37924.c:
	  Fix gcc compilation failure.

2012-02-16 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/peeph-r2k.def:
	  Use some peepholes useful when omitting the frame pointer from z80 for r2k.
	* src/z80/gen.c:
	  Improve code generation for r2k when omitting frame pointer, enable use of ld iy, hl on r2k.

2012-02-16 Borut Razem <borut.razem AT gmail.com>

	* support/sdbinutils/include/opcode/sparc.h,
	  support/sdbinutils/include/aout/sun4.h:
	  added for NetBSD/sparc64 bfd build

2012-02-15 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/hc08/main.c (hasExtBitOp),
	  src/hc08/gen.c (genGetAbit, genGetByte, genGetWord, genhc08Code):
	  implemented the GETABIT, GETBYTE, and GETWORD iCodes for HC08

2012-02-15 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/z80/gen.c:
	  Cheaper signed comparison when right operand is a literal.
	* support/regression/tests/gcc-torture-execute-pr37924.c:
	  Disable even more of a test for older gcc.

2012-02-15 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* support/regression/tests/gcc-torture-execute-pr37924.c,